# az-learning

./: README.md  project-body.json  requirements.txt  response.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: azure-managed-identity.instructions.md  classification-hybride.instructions.md  frontend-design.instructions.md  python-fastapi.instructions.md  python-quality.instructions.md
notebooks/: 01-fondamentaux-azure-paas.ipynb  02-foundry-agent-playground.ipynb  02-monitoring-application-insights.ipynb  03-projet-devops-agile.ipynb  04-architecture-web.ipynb  05-securite-cloud.ipynb  06-monitoring-et-evaluation.ipynb  07-docker-container-apps.ipynb  08-bases-de-donnees-et-stockage.ipynb  08-bicep-iac.ipynb  09-bicep-iac.ipynb
projet/mailroom-ia/: DESIGN.md  README.md  SPEC.md  check.sh  response.json  setup.ipynb
projet/mailroom-ia/docs/: architecture.drawio
projet/mailroom-ia/infra/: README.md  infra-apps.bicep  infra-apps.json  infra-apps.parameters.json  infra-base.bicep  infra-base.parameters.json
projet/mailroom-ia/web/: .dockerignore  .gitignore  Dockerfile  README.md  (+5 more)
projet/mailroom-ia/worker/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
projet/mailroom-ia/worker/worker/: __init__.py  main.py  settings.py
projet/mailroom-ia/worker/worker/adapters/: __init__.py  blob.py  cosmos.py  doc_intelligence.py  foundry.py  queue.py
projet/mailroom-ia/worker/worker/domain/: __init__.py  models.py
projet/mailroom-ia/worker/worker/services/: __init__.py  pipeline.py
(+26 files in other folders)
